python assessment added

--- a/Module 2  Python/Assesment/Introduction_To_Python_Assessment.ipynb
+++ b/Module 2  Python/Assesment/Introduction_To_Python_Assessment.ipynb
@@ -11,9 +11,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c9e4e9d-7674-427b-8d15-cba2e4a16015",
+   "id": "432ba471-116b-4230-9260-f301f119524d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Change Pin\n",
+      "2. Deposit Money\n",
+      "3. Withdraw Money\n",
+      "4. Check Balance\n",
+      "5. Exit\n"
+     ]
+    }
+   ],
    "source": [
     "class ATM():\n",
     "    def __init__(self):\n",
@@ -36,9 +48,9 @@
     "        pin_created=input(\"Enter the pin: \")\n",
     "        if pin_created==self.pin:\n",
     "            amount_to_withdraw=int(input(\"Enter the amount: \"))\n",
-    "            if 0<amount_to_withdraw>=self.balance:\n",
-    "                amount_to_withdraw-=self.balance\n",
-    "                print(f,\"{Amount withdrawl}, Remaining_Balance{self.balance\")\n",
+    "            if 0<amount_to_withdraw<=self.balance:\n",
+    "                self.balance -= amount_to_withdraw\n",
+    "                print(f\"Amount withdrawn: {amount_to_withdraw}, Remaining Balance: {self.balance}\")\n",
     "            else:\n",
     "                print(\"Insufficient Balance cant withdraw !!\")\n",
     "    def check_balance(self):\n",
@@ -46,33 +58,44 @@
     "        if pin_created==self.pin:\n",
     "            print(f\"Balance is {self.balance}\")\n",
     "\n",
+    "    def run(self):\n",
+    "        while True:\n",
+    "            print(\"1. Change Pin\")\n",
+    "            print(\"2. Deposit Money\")\n",
+    "            print(\"3. Withdraw Money\")\n",
+    "            print(\"4. Check Balance\")\n",
+    "            print(\"5. Exit\")\n",
+    "            try:\n",
+    "                choice = int(input(\"Enter the choice: \"))\n",
+    "                if choice == 1:\n",
+    "                    atm.change_pin()\n",
+    "                elif choice == 2:\n",
+    "                    atm.deposit_money()\n",
+    "                elif choice == 3:\n",
+    "                    atm.withdraw_amount()\n",
+    "                elif choice == 4:\n",
+    "                    atm.check_balance()\n",
+    "                elif choice==5:\n",
+    "                    print(\"Thanks visit next time !!\")\n",
+    "                    break\n",
+    "                else:\n",
+    "                    print(\"Invalid Choice !!\")\n",
+    "            except ValueError:\n",
+    "                print(\"Please Enter the valid number !!\")\n",
     "\n",
     "# Object Creation:-\n",
-    "\n",
-    "atm=ATM()\n",
-    "\n",
-    "while True:\n",
-    "    print(\"1. Change Pin\")\n",
-    "    print(\"2. Deposit Money\")\n",
-    "    print(\"3. Withdraw Money\")\n",
-    "    print(\"4. Check Balance\")\n",
-    "    print(\"5. Exit\")\n",
-    "    choice = int(input(\"Enter the choice: \"))\n",
-    "\n",
-    "    if choice == 1:\n",
-    "        atm.change_pin()\n",
-    "    elif choice == 2:\n",
-    "        atm.deposit_money()\n",
-    "    elif choice == 3:\n",
-    "        atm.withdraw_amount()\n",
-    "    elif choice == 4:\n",
-    "        atm.check_balance()\n",
-    "    elif choice==5:\n",
-    "        print(\"Thanks visit next time !!\")\n",
-    "        break\n",
-    "    else:\n",
-    "        print(\"Invalid Choice !!\")"
+    "atm = ATM()\n",
+    "atm.run()\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b1a091d-c6d2-4ef7-9636-a12fd280a7de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
